# audit_review_list

./: Makefile  Org & Resources – revise suggestion.html  README.md  README_harvester.md  pyproject.toml  r_d_capability_audit_html.backup.html  r_d_capability_audit_html.html
.github/workflows/: harvest.yml
basic_knowledge/: __init__.py
basic_knowledge/_index/: SUMMARY.md  extracted.jsonl  manifest.json  registry.json  scan_report.json
basic_knowledge/method_frame/_index/: SUMMARY.md  manifest.json  registry.json
basic_knowledge/method_frame/_samples/: prioritization.md  root_cause_analysis.md
basic_knowledge/method_harvester/: __init__.py  parser.py  registry.py  renderer.py
basic_knowledge/scripts/: harvest_methods.py
basic_knowledge/tests/: test_harvest.py  test_pdf_extract.py
data/: change.json  design.json  i18n-ui.json  org.json  perf.json  process.json  risk.json  scm.json  verify.json
method_harvester/: README.md  __init__.py  manifest.py  normalize.py  parser.py  renderer.py
revise/: revise.md  revise_new.md
scripts/: README.md  harvest_methods.py
tests/: test_harvest.py
