[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "method-harvester"
version = "0.1.0"
description = "Knowledge harvester for thinking models and methodologies"
authors = [{name = "Codex Agent"}]
requires-python = ">=3.11"
keywords = ["knowledge-base", "frameworks", "harvester"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
  "lxml",
  "pypdf",
  "python-docx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools]
packages = ["method_harvester"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

